fix: CSRF兼容登录+密码格式兼容+列扩容+JS错误处理+XSS补全